tests/ui/parser/issues/issue-105209.stderr
error: mismatched closing delimiter: `)`
  --> $DIR/issue-105209.rs:2:11
   |
LL | #![c={#![c[)x
   |           ^^ mismatched closing delimiter
   |           |
   |           unclosed delimiter

error: this file contains an unclosed delimiter
  --> $DIR/issue-105209.rs:3:56
   |
LL | #![c={#![c[)x
   |   -  -  - unclosed delimiter
   |   |  |
   |   |  unclosed delimiter
   |   unclosed delimiter
LL |
   |                                                       ^

error: aborting due to 2 previous errors

